# rattice

./: Cargo.toml  LICENSE-MIT  README.md  flake.nix
.github/workflows/: release.yml
src/: auth.rs  cli.rs  config.rs  error.rs  generate.rs  handle.rs  lib.rs  main.rs  model.rs  template.rs  trace.rs
templates/: rattice.html
