[package]
name = "rattice"
version = "0.0.3"
authors = ["Ryota Okimatsu <oza6ut0ne@gmail.com>"]
description = "A media viewer for web browsers with lattice pattern."
license = "MIT OR Apache-2.0"
repository = "https://github.com/oza6ut0ne/rattice"
categories = ["multimedia::images", "multimedia::video", "visualization"]
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.47"
askama = "0.10.5"
axum = "0.4.4"
axum-server = { version = "0.3.3", features = ["tls-rustls"] }
base64 = "0.13.0"
clap = { version = "3.1.2", features = ["env", "derive"] }
hyper = { version = "0.14.15", features = ["full"] }
percent-encoding = "2.1.0"
rand = "0.8.4"
tokio = { version = "1.14.0", features = ["full"] }
tower = "0.4.11"
tower-http = { version = "0.1.2", features = ["auth", "fs", "trace"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
