[package]
name = "rattice"
version = "0.5.0"
authors = ["Ryota Okimatsu <oza6ut0ne@gmail.com>"]
description = "A media viewer for web browsers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/oza6ut0ne/rattice"
categories = ["multimedia::images", "multimedia::video", "visualization"]
readme = "README.md"
edition = "2021"

[profile.release]
strip = "symbols"
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.47"
askama = "0.12.0"
axum = "0.6.20"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
base64 = "0.13.0"
clap = { version = "3.2.18", features = ["env", "derive"] }
glob = "0.3.3"
hyper = { version = "0.14.27", features = ["full"] }
percent-encoding = "2.1.0"
rand = "0.8.4"
rayon = "1.7.0"
regex = "1"
tokio = { version = "1.31.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["auth", "fs", "trace"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies]
tikv-jemallocator = "0.5"
